--- a/diary/src/App.css
+++ b/diary/src/App.css
@@ -25,3 +25,36 @@
   width: 500px;
   padding: 10px;
 }
+
+/* List */
+
+.DiaryList {
+  border: 2px solid gray;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.DiaryList h2 {
+  text-align: center;
+}
+
+.DiaryItem {
+  background-color: rgb(240,240,240);
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.DiaryItem .info {
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.DiaryItem .date {
+  color:gray
+}
+
+.DiaryItem .content {
+  font-weight: bold;
+  margin: 30px;
+}
