--- a/emotion/src/App.css
+++ b/emotion/src/App.css
@@ -260,3 +260,69 @@ header button {
   color: white;
 }
 
+/* Diary */
+.DiaryPage section {
+  width: 100%;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.DiaryPage h4 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.DiaryPage .diary_img {
+  background-color: #ececec;
+  width: 250px;
+  height: 250px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.DiaryPage .img_1 {
+  background-color: #ececec;
+}
+
+.DiaryPage .img_1 {
+  background-color: #64c964;
+}
+.DiaryPage .img_2 {
+  background-color: #9dd772;
+}
+.DiaryPage .img_3 {
+  background-color: #fdce17;
+}
+.DiaryPage .img_4 {
+  background-color: #fd8446;
+}
+.DiaryPage .img_5 {
+  background-color: #fd565f;
+}
+
+.DiaryPage .emotion_descript {
+  font-size: 25px;
+}
+
+.DiaryPage .diary_content {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 5px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+
+.DiaryPage .diary_content p{
+  padding: 20px;
+  text-align: left;
+  font-size: 20px;
+  font-family: "Yeon sung";
+  font-weight: 400;
+  line-height: 2.5;
+}
